tests/language_tests/pass/0088_return_bubbles_out_of_nested_block.ee
fn helper() {
    {
        return 7;
    }
    print(999);
}

fn main() {
    print(helper());
}
