tests/language_tests/fail/0078_unclosed_string.ee
fn main() {
    print("missing end);
}
